--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "axios": "^1.6.0",
+    "express": "^4.18.1",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -14,12 +16,18 @@
     "@nx/devkit": "19.6.0",
     "@nx/eslint": "19.6.0",
     "@nx/eslint-plugin": "19.6.0",
+    "@nx/express": "19.6.0",
     "@nx/jest": "19.6.0",
     "@nx/js": "19.6.0",
     "@nx/next": "19.6.0",
+    "@nx/node": "19.6.0",
     "@nx/playwright": "19.6.0",
+    "@nx/web": "19.6.0",
+    "@nx/webpack": "19.6.0",
     "@nx/workspace": "19.6.0",
     "@playwright/test": "^1.36.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -41,12 +49,15 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "nx": "19.6.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "webpack-cli": "^5.1.4"
   }
 }
