--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.6.0",
     "express": "^4.18.1",
     "next": "14.2.3",
+    "playwright": "^1.46.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tslib": "^2.3.0"
