--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "next": "14.2.3",
     "playwright": "^1.46.1",
@@ -32,6 +33,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
