--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "moment-timezone": "^0.5.45",
     "next": "14.2.3",
     "playwright": "^1.46.1",
     "react": "18.3.1",
