--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "playwright": "^1.46.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nx/devkit": "19.6.0",
