--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@ag.ds-next/react": "^1.23.1",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "moment-timezone": "^0.5.45",
     "next": "14.2.3",
     "playwright": "^1.46.1",
